# klondike_cpp

./: .gitignore  .travis.yml  CMakeLists.txt  Card.h  CardInfo.h  Column.h  Deck.h  Event.h  ISolitaireRules.h  Klondike.cpp  Klondike.h  LICENSE  README.md  SolitaireComponent.h  Stock.h  Store.h  main.cpp
ci/travis/: install-linux.sh
